# course_work

./: CMakeLists.txt  app.cpp  database.db  main_window.cpp  main_window.h  main_window.ui
documentation/html/: annotated.html  class_main_window-members.html  class_main_window.html  classes.html  files.html  files_dup.js  hierarchy.html  index.html  main__window_8h_source.html  navtreedata.js  navtreeindex0.js
documentation/latex/: annotated.tex  class_main_window.tex  refman.tex
